--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.0.2
   date_time_picker: ^2.1.0
+  cloud_firestore: ^4.7.1
 
 dev_dependencies:
   flutter_test:
