--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   date_time_picker: ^2.1.0
   firebase_core: ^2.13.0
   cloud_firestore: ^4.7.1
+  provider: ^5.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
